--- a/website/app/[locale]/(root)/docs/display/content.mdx
+++ b/website/app/[locale]/(root)/docs/display/content.mdx
@@ -41,7 +41,7 @@ Use `block`, `inline`, and `inline-block` to set the flow of elements.
 </div>
 ```
 
-import aron from 'websites/images/authors/aron.jpg'
+import aron from '~/public/images/authors/aron.jpg'
 
 ### Flex
 Use `flex` to create a block-level flex container.
