--- a/website/app/[locale]/(root)/docs/code-linting/components/Footer.mdx
+++ b/website/app/[locale]/(root)/docs/code-linting/components/Footer.mdx
@@ -1,6 +1,6 @@
 ## Visual Studio Code
 
-import VSCodeSvg from 'websites/icons/visualstudiocode.svg'
+import VSCodeSvg from '~/public/icons/visualstudiocode.svg'
 
 Typical setup for Visual Studio Code users.
 
