--- a/website/app/[locale]/(root)/docs/code-linting/vscode/content.mdx
+++ b/website/app/[locale]/(root)/docs/code-linting/vscode/content.mdx
@@ -1,4 +1,4 @@
-import VSCodeSvg from 'websites/icons/visualstudiocode.svg'
+import VSCodeSvg from '~/public/icons/visualstudiocode.svg'
 
 <StepSection className="mt:50">
     <Step $row>
