--- a/website/app/[locale]/(root)/docs/language-service/vscode/content.mdx
+++ b/website/app/[locale]/(root)/docs/language-service/vscode/content.mdx
@@ -1,4 +1,4 @@
-import VSCodeSvg from 'websites/icons/visualstudiocode.svg'
+import VSCodeSvg from '~/public/icons/visualstudiocode.svg'
 
 The official Master CSS Language Service for Visual Studio Code extension.
 
