--- a/website/app/[locale]/(root)/roadmap/content.mdx
+++ b/website/app/[locale]/(root)/roadmap/content.mdx
@@ -1,4 +1,4 @@
-import latestMasterCSSVersion from 'websites/version';
+import latestMasterCSSVersion from '~/version';
 
 ###### On this page
 <ArticleTOC data={toc}/>
