Improve(Normal CSS): Support modular import on demand

--- a/website/app/[locale]/(root)/docs/global-styles/content.mdx
+++ b/website/app/[locale]/(root)/docs/global-styles/content.mdx
@@ -1,15 +1,22 @@
 ## Installation [sr-only]
 You might be familiar with CSS packages like [modern-normalize](https://github.com/sindresorhus/modern-normalize) or [normalize.css](https://github.com/necolas/normalize.css). We've created a lightweight **~500B** CSS package, [@master/normal.css](https://www.npmjs.com/package/@master/normal.css), streamlines your global style setup and tackles inconsistencies in default browser styles.
 
-`npm install @master/normal.css@beta` and import into your global CSS file:
+`npm install @master/normal.css@beta` and import it in your global CSS file:
 ```css
 @import '@master/normal.css';
 ```
-Or paste the CDN to preset global styles quickly:
-```html
-<link href="https://cdn.master.co/normal.css@beta" rel="stylesheet">
-```
-View the [source code](https://github.com/master-co/css/tree/beta/packages/normal.css) or continue to understand what the package does ↓
+<details>
+    <summary>Paste the CDN or import on-demand through modularization.</summary>
+    <div>
+        ```html
+        <link href="https://cdn.master.co/normal.css@beta" rel="stylesheet">
+        ```
+        Or import on-demand:
+        <Code lang="css">
+            {require('!!raw-loader!../../../../../../packages/normal.css/src/index.css').default.replace(/(..\/)\b/g, '@master/normal.css/')}
+        </Code>
+    </div>
+</details>
 
 ---
 
@@ -17,51 +24,169 @@ View the [source code](https://github.com/master-co/css/tree/beta/packages/norma
 ### Better text rendering and appearance
 Ensure consistent, clear, high-quality text and font appearance across various browsers.
 <Code lang="css">
-{require('!!raw-loader!../../../../../../packages/normal.css/src/better-text-appearance.css').default}
+{require('!!raw-loader!../../../../../../packages/normal.css/better-text-appearance.css').default}
+</Code>
+
+### Consistent abbreviation styles
+Fixed the inconsistent appearance of `html <abbr>` across browsers.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/consistent-abbreviation-styles.css').default}
+</Code>
+
+### Consistent control styles
+Fixed the inconsistent appearance of controls across browsers.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/consistent-control-styles.css').default}
+</Code>
+
+### Consistent horizontal lines
+Fixed the inconsistent appearance of horizontal lines across browsers.
+<Demo $py={0}>
+    <DemoPanel className="grid-cols:2 gap:30 gap:50@sm w:full">
+        <div>
+            <small>Before</small>
+            <hr className="mt:20! mb:0! {all:revert}" />
+        </div>
+        <div>
+            <small>After</small>
+            <hr className="mt:20! mb:0! border-color:inherit!" />
+        </div>
+    </DemoPanel>
+</Demo>
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/consistent-horizontal-lines.css').default}
+</Code>
+
+### Consistent bold styles
+Fixed the inconsistent font weight of `html <b>` and `html <strong>` across browsers.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/consistent-bold-styles.css').default}
+</Code>
+
+### Consistent small styles
+Fixed the inconsistent font size of `html <small>` across browsers.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/consistent-small-styles.css').default}
+</Code>
+
+### Consistent superscript and subscript styles
+Fixed the inconsistent appearance of superscripts and subscripts across browsers.
+<Demo $py={0}>
+    <DemoPanel>
+        <p className="my:0">This paragraph contains a <sub>subscript</sub> and a <sup>superscript</sup>.</p>
+    </DemoPanel>
+</Demo>
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/consistent-superscript-subscript.css').default}
+</Code>
+
+### Consistent table styles
+Fixed the inconsistent appearance of tables across browsers.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/consistent-table-styles.css').default}
 </Code>
 
 ### Intuitive sizing control
 Control the size of elements more intuitively, including content and padding, without worrying about the impact of padding and borders on dimensions.
 <Code lang="css">
-{require('!!raw-loader!../../../../../../packages/normal.css/src/intuitive-sizing-control.css').default}
+{require('!!raw-loader!../../../../../../packages/normal.css/intuitive-sizing-control.css').default}
+</Code>
+
+### Readable tab size
+Setting the tab size to 4 makes the code more structured and easier to read.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/readable-tab-size.css').default}
+</Code>
+
+### Remove anchor styles
+The `html <a>` element usually serves as more than just an inline text link; it could be a button, navigation, or even a card.
+
+Removing its default underline and inheriting the parent color allows you to start with a clean style.
+<Demo $py={0}>
+    <DemoPanel className="grid-cols:2 gap:30 gap:50@sm">
+        <div>
+            <small>Before</small>
+            <a href="#" className="mt:10 block text:underline fg:revert">Learn more</a>
+        </div>
+        <div>
+            <small>After</small>
+            <a href="#" className="mt:10 block">Learn more</a>
+        </div>
+    </DemoPanel>
+</Demo>
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/remove-anchor-styles.css').default}
+</Code>
+
+### Remove control styles
+Inherit the font family, size, and color of control elements from the parent's settings and remove spacing and background as a cleaner starting point.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/remove-control-styles.css').default}
 </Code>
 
 ### Remove default borders and preset to solid style
 Remove borders from all elements to give you the freedom to fully customize the appearance of your elements, preset to the most used solid style.
 <Code lang="css">
-{require('!!raw-loader!../../../../../../packages/normal.css/src/remove-default-borders.css').default}
+{require('!!raw-loader!../../../../../../packages/normal.css/remove-default-borders.css').default}
 </Code>
 
 ### Remove default spacing
 Setting margins and padding to zero allows you to customize the appearance and spacing of elements without worrying about the impact of default browser styles.
 <Code lang="css">
-{require('!!raw-loader!../../../../../../packages/normal.css/src/remove-default-spacing.css').default}
+{require('!!raw-loader!../../../../../../packages/normal.css/remove-default-spacing.css').default}
+</Code>
+
+### Remove list styles
+Remove the `ul` styles while retaining it as a commonly used structural markup for elements like the navbar and menu.
+<Code lang="css">
+{require('!!raw-loader!../../../../../../packages/normal.css/remove-list-styles.css').default}
 </Code>
 
 ### Remove tap highlight color
 You should customize the tap highlight color based on current UI features rather than relying on the default.
 <Code lang="css">
-{require('!!raw-loader!../../../../../../packages/normal.css/src/remove-tap-highlight.css').default}
+{require('!!raw-loader!../../../../../../packages/normal.css/remove-tap-highlight.css').default}
 </Code>
 The `-webkit-tap-highlight-color` CSS property controls the highlight color that appears when an element is tapped on a mobile device, such as Safari and some WebKit-based mobile browsers.
 
 ### Eliminate click delays
 Disable double-click to zoom on links, input fields, and buttons to improve responsiveness for touch devices.
 <figure>
-    <iframe className="aspect:16/9 w:full" src="https://www.youtube.com/embed/AjUpiwvIa5A?si=qatiz-LszvYqE15c&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe className="aspect:16/9 w:full" src="https://www.youtube.com/embed/AjUpiwvIa5A?si=qatiz-LszvYqE15c&amp;controls=0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowFullScreen></iframe>
     <figcaption>[300ms tap delay, gone away](https://developer.chrome.com/blog/300ms-tap-delay-gone-away)</figcaption>
 </figure>
 <Code lang="css">
-{require('!!raw-loader!../../../../../../packages/normal.css/src/eliminate-click-delays.css').default}
+{require('!!raw-loader!../../../../../../packages/normal.css/eliminate-click-delays.css').default}
 </Code>
 An instantly responsive UI enables users to confidently press each button without pausing and waiting for a response. To learn more about the influence of human reaction times and web performance, explore the [introduction to RAIL](https://web.dev/articles/rail).
 
+(x) Disabling `user-scalable=no` can harm user experience, accessibility, and mobile-friendliness and have negative SEO implications.
+```html
+<meta name="viewport" content="width=device-width, **user-scalable=no**">
+```
+
 ### Responsive friendly media elements
 Preset the maximum width of media-related elements to the parent container to make them responsive.
+<Demo>
+    <div className="grid-cols:2 gap:20">
+        <div>
+            <small>Before</small>
+            <div className="mt:10 b:1|crimson-60 square overflow:hidden">
+                <Image src={require('~/public/images/chicken.png').default} width={500} height={500} alt="No responsive image" className="max-w:none" />
+            </div>
+        </div>
+        <div>
+            <small>After</small>
+            <div className="mt:10 b:1|green-60 square">
+                <Image src={require('~/public/images/chicken.png').default} width={500} height={500} alt="Responsive image" />
+            </div>
+        </div>
+    </div>
+</Demo>
 <Code lang="css">
-{require('!!raw-loader!../../../../../../packages/normal.css/src/responsive-media-elements.css').default}
+{require('!!raw-loader!../../../../../../packages/normal.css/responsive-media-elements.css').default}
 </Code>
-Browsers default these elements to `inline` display. Preset them as `block` and can be centered using common tricks like `margin: auto`.
+Browsers default these elements to `inline` display. `block` can be centered using common tricks like `margin: auto`.
 
 ---
 
@@ -85,7 +210,7 @@ For example, add a blue underline to all links:
     <a href="#weakly-apply-styles">Weakly apply styles</a>
 </article>
 ```
-Henceforth you don't need to declare `css !important` to remove the underline for a specific link.
+(o) You can now remove the underline without `css !important`.
 ```html
 <a class="**text-decoration:none**">…</a>
 ```
